import { render, screen } from '@testing-library/react';
// import userEvent from '@testing-library/user-event';
import { describe, expect, it, vi } from 'vitest';
import { DataTable } from './DataTable';

describe('DataTable', () => {
  const mockData = [
    { id: 1, name: 'Test Item 1', value: 'A' },
    { id: 2, name: 'Test Item 2', value: 'B' },
  ];

  const mockColumns = [
    { key: 'name', header: 'Name' },
    { key: 'value', header: 'Value' },
  ];

  const renderBasicDataTable = (props = {}) => {
    return render(
      <DataTable data-testid="datatable" data={mockData} columns={mockColumns} {...props} />
    );
  };

  describe('Snapshots', () => {
    it('matches default snapshot', () => {
      const { container } = renderBasicDataTable();
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches loading state snapshot', () => {
      const { container } = renderBasicDataTable({ loading: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches disabled state snapshot', () => {
      const { container } = renderBasicDataTable({ disabled: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches error state snapshot', () => {
      const { container } = renderBasicDataTable({ error: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches required state snapshot', () => {
      const { container } = renderBasicDataTable({ required: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches checked state snapshot', () => {
      const { container } = renderBasicDataTable({ checked: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches selected state snapshot', () => {
      const { container } = renderBasicDataTable({ selected: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches hover state snapshot', () => {
      const { container } = renderBasicDataTable({ hover: true });
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  describe('Basic Functionality', () => {
    it('renders correctly', () => {
      renderBasicDataTable();
      expect(screen.getByTestId('datatable')).toBeInTheDocument();
    });
  });

  describe('States', () => {
    it('handles loading state correctly', () => {
      renderBasicDataTable({ loading: true });
      const element = document.querySelector('.datatable.state-loading');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for loading state
    });
    it('handles disabled state correctly', () => {
      renderBasicDataTable({ disabled: true });
      const element = screen.getByTestId('datatable');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for disabled state
    });
    it('handles error state correctly', () => {
      renderBasicDataTable({ error: true });
      const element = document.querySelector('.datatable.state-error');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for error state
    });
    it('handles required state correctly', () => {
      renderBasicDataTable({ required: true });
      const element = screen.getByTestId('datatable');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for required state
    });
    it('handles checked state correctly', () => {
      renderBasicDataTable({ checked: true });
      const element = screen.getByTestId('datatable');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for checked state
    });
    it('handles selected state correctly', () => {
      renderBasicDataTable({ selected: true });
      const element = screen.getByTestId('datatable');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for selected state
    });
    it('handles hover state correctly', () => {
      renderBasicDataTable({ hover: true });
      const element = screen.getByTestId('datatable');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for hover state
    });
  });

  describe('Events', () => {
    it('handles onSort correctly', async () => {
      const onSort = vi.fn();
      // const user = userEvent.setup();
      renderBasicDataTable({ onSort });

      // TODO: Add specific event triggering based on onSort
      expect(onSort).toBeDefined();
    });
    it('handles onFilter correctly', async () => {
      const onFilter = vi.fn();
      // const user = userEvent.setup();
      renderBasicDataTable({ onFilter });

      // TODO: Add specific event triggering based on onFilter
      expect(onFilter).toBeDefined();
    });
    it('handles onPageChange correctly', async () => {
      const onPageChange = vi.fn();
      // const user = userEvent.setup();
      renderBasicDataTable({ onPageChange });

      // TODO: Add specific event triggering based on onPageChange
      expect(onPageChange).toBeDefined();
    });
    it('handles onRowClick correctly', async () => {
      const onRowClick = vi.fn();
      // const user = userEvent.setup();
      renderBasicDataTable({ onRowClick });

      // TODO: Add specific event triggering based on onRowClick
      expect(onRowClick).toBeDefined();
    });
    it('handles onRowDoubleClick correctly', async () => {
      const onRowDoubleClick = vi.fn();
      // const user = userEvent.setup();
      renderBasicDataTable({ onRowDoubleClick });

      // TODO: Add specific event triggering based on onRowDoubleClick
      expect(onRowDoubleClick).toBeDefined();
    });
  });

  describe('Accessibility', () => {
    it.skip('can be focused - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderBasicDataTable();
      const element = screen.getByTestId('datatable');
      expect(element).toBeInTheDocument();
      // TODO: Add specific ARIA attribute tests based on component type
    });

    it.skip('supports keyboard navigation - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('announces changes to screen readers', () => {
      renderBasicDataTable();
      // TODO: Add screen reader announcement tests
      expect(screen.getByTestId('datatable')).toBeInTheDocument();
    });

    it('respects reduced motion preferences', () => {
      renderBasicDataTable();
      // TODO: Add reduced motion tests
      expect(screen.getByTestId('datatable')).toBeInTheDocument();
    });
  });

  describe('Custom Styling and Props', () => {
    it('accepts custom className', () => {
      renderBasicDataTable({ className: 'custom-class' });
      const element = screen.getByTestId('datatable');
      expect(element).toHaveClass('custom-class');
    });

    it('forwards refs correctly', () => {
      const ref = vi.fn();
      renderBasicDataTable({ ref });
      // Ref forwarding test - environment dependent
      // expect(ref).toHaveBeenCalledWith(expect.any(HTMLElement));
    });

    it('spreads additional props', () => {
      renderBasicDataTable({ 'data-custom': 'test-value' });
      const element = screen.getByTestId('datatable');
      expect(element).toHaveAttribute('data-custom', 'test-value');
    });
  });

  describe('Edge Cases', () => {
    it('handles undefined props gracefully', () => {
      renderBasicDataTable({ children: undefined });
      expect(screen.getByTestId('datatable')).toBeInTheDocument();
    });

    it('handles null props gracefully', () => {
      renderBasicDataTable({ children: null });
      expect(screen.getByTestId('datatable')).toBeInTheDocument();
    });

    it('handles empty string props', () => {
      renderBasicDataTable({ className: '' });
      expect(screen.getByTestId('datatable')).toBeInTheDocument();
    });

    it('handles rapid prop changes', () => {
      const { rerender } = renderBasicDataTable({ className: 'class1' });
      rerender(
        <DataTable
          data-testid="datatable"
          data={mockData}
          columns={mockColumns}
          className="class2"
        />
      );
      const element = screen.getByTestId('datatable');
      expect(element).toHaveClass('class2');
    });

    it('handles complex nested content', () => {
      render(
        <DataTable data-testid="datatable" data={mockData} columns={mockColumns}>
          <div>
            <span>Nested content</span>
            <p>More content</p>
          </div>
        </DataTable>
      );
      expect(screen.getByTestId('datatable')).toBeInTheDocument();
    });

    it('maintains functionality with many children', () => {
      render(
        <DataTable data-testid="datatable" data={mockData} columns={mockColumns}>
          {Array.from({ length: 100 }, (_, i) => (
            <div key={i}>Item {i}</div>
          ))}
        </DataTable>
      );
      expect(screen.getByTestId('datatable')).toBeInTheDocument();
    });

    it('handles component unmounting cleanly', () => {
      const { unmount } = renderBasicDataTable();
      expect(() => unmount()).not.toThrow();
    });

    it('preserves functionality after remounting', () => {
      const { unmount } = renderBasicDataTable();
      unmount();
      renderBasicDataTable();
      expect(screen.getByTestId('datatable')).toBeInTheDocument();
    });
  });
});

// TODO: Review and customize generated tests based on component-specific requirements
// TODO: Add component-specific interaction tests
// TODO: Verify all variant combinations work correctly
// TODO: Test integration with form libraries if applicable
// TODO: Add performance tests for complex components
